--- a/src/main/resources/templates/index-logged.html
+++ b/src/main/resources/templates/index-logged.html
@@ -64,21 +64,21 @@
                 <img src="https://www.educative.io/v2api/editorpage/6402891239653376/image/5261134581989376" height="650px" width="1600px" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h3></h3>
-                    <a class="btn btn-lg btn-danger btn-block" href="/learn" role="button"> Start Learning Java Now! &raquo;</a>
+                    <a class="btn btn-lg btn-danger btn-block" href="/learn-logged" role="button"> Start Learning Java Now! &raquo;</a>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="https://www.fita.in/wp-content/uploads/2020/10/oops-concepts-in-java.jpg" height="650px" width="1600px" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h3></h3>
-                    <a class="btn btn-lg btn-danger btn-block" href="/learn/oop" role="button"> Start Learning &raquo;</a>
+                    <a class="btn btn-lg btn-danger btn-block" href="/learn/oop-logged" role="button"> Start Learning &raquo;</a>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="https://miro.medium.com/max/1400/1*5h3Fv82Gsilyhh2URcIVZA.png" height="650px" width="1600px" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h3>Java Basics</h3>
-                    <a class="btn btn-lg btn-danger btn-block" href="/learn/java-basics" role="button"> Start Learning &raquo;</a>
+                    <a class="btn btn-lg btn-danger btn-block" href="/learn/java-basics-logged" role="button"> Start Learning &raquo;</a>
                 </div>
             </div>
         </div>
